--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/css/style.css?v=8" />
+    <link rel="stylesheet" href="/css/style.css?v=11" />
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:100,100italic,200,200italic,300,300italic,regular,italic,500,500italic,600,600italic,700,700italic,800,800italic,900,900italic"
       rel="stylesheet"
     />
-    <script defer src="/js/app.js"></script>
+    <script defer src="/js/app.js?v=5"></script>
     <title>CountDown</title>
   </head>
   <body>
@@ -19,19 +19,19 @@
         <div class="countdown">
           <div class="days">
             <span>Dias</span>
-            <p>08</p>
+            <p>00</p>
           </div>
           <div class="hours">
             <span>Horas</span>
-            <p>: 12</p>
+            <p>00</p>
           </div>
           <div class="minutes">
             <span>Minutos</span>
-            <p>: 44</p>
+            <p>00</p>
           </div>
           <div class="seconds">
             <span>Segundos</span>
-            <p>: 28</p>
+            <p>00</p>
           </div>
         </div>
         <div class="news-letter">
